feat: implement login page, Spring Security configuration, and Netlify proxy routing